--- a/src/componentes/TaskBar/taskbar.css
+++ b/src/componentes/TaskBar/taskbar.css
@@ -1,10 +1,21 @@
+:root{
+    --cor-primaria: #3F7AFD;
+    --cor-secundaria: #3871D7;
+    --cor-terciaria: #1C1C1C;
+    --cor-quartenaria: #FFF9F0;
+}
+
+body{
+    background-color: var(--cor-quartenaria);
+}
+
 .taskbar {
   display: flex;
   justify-content: space-between;
   align-items: center;
   background-color: black;
   color: white;
-  padding: 1.5rem 4rem; /* menos exagerado que 3rem só no topo */
+  padding: 1.5rem 4rem; 
 }
 
 .titulo-taskbar {
@@ -14,16 +25,43 @@
 
 .container-taskbar {
   display: flex;
-  gap: 2rem; /* espaçamento bonito entre os links */
+  gap: 1.4rem; 
 }
 
 .links-taskbar {
   text-decoration: none;
-  color: white;
-  font-size: 1rem;
+  color: rgba(255, 255, 255, 0.664);
+  font-size: 16px;
   transition: color 0.3s ease;
+  position: relative;
+  letter-spacing: 0.7px;
+  padding: 0 10px;
 }
 
-.links-taskbar:hover {
-  color: rgb(161, 161, 161);
+.links-taskbar:after{
+    content: "";
+    position: absolute;
+    background-color: #ff3c78;
+    height: 3px;
+    width: 0;
+    left: 0;
+    bottom: -8px;
+    transition: 0.3s;
 }
+
+.links-taskbar:hover{
+    color: #ffffff;
+}
+
+.links-taskbar:hover:after{
+    width: 100%;
+}
+
+*,
+*::before,
+*::after{
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+}
+
